--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Software Engineer, Backend Developer, Rust, Python, AWS, Azure, Linux</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+                        <a href="Vedant Acharya CV.pdf" class="btn btn-primary py-3 px-4 me-5" download>Download CV</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
